--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,6 @@
 		<link
 			rel="stylesheet"
 			type="text/css"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-		/>
-		<link
-			rel="stylesheet"
-			type="text/css"
 			href="https://cdn.jsdelivr.net/npm/css-litcss@1.7.0/main/css/litcss.min.css"
 		/>
 		<link
@@ -72,4 +67,5 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
+	<script defer src="https://medium-widget.pixelpoint.io/widget.js"></script>
 </html>
